<resources>
    <string name="app_name">GagaoTalk</string>

    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>

    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>

    <string name="loading">Loading…</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>

    <string name="emailpassword_title_text">Email and Password</string>
    <string name="create_account">Create Account</string>
    <string name="verify_email">Verify Email</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="title_activity_user">User Info</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="logOut">로그아웃</string>
    <string name="pushOn">알림 On</string>
    <string name="pushOff">알림 Off</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gagao_talk">Gagao Talk</string>
    <string name="Desc_ProfilePicture">프로필 사진</string>
    <string name="name">이름</string>
    <string name="stateMsg">상태메세지</string>
    <string name="phone">연락처</string>
    <string name="save">저장</string>
    <string name="chating">1:1채팅</string>
    <string name="call">전화걸기</string>
    <string name="send">전송</string>
    <string name="MyProfile">내프로필</string>
    <string name="profileimage">ProfileImage</string>
    <string name="UserList">친구목록</string>
    <string name="stateMsgText">상태메세지......</string>
    <string name="KorGagaoTalk">가가오톡</string>
    <string name="LastMessage">마지막 메세지.....</string>
</resources>
