<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgUser"
            android:layout_margin="10dp"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/profileimage" />

        <TextView
            android:id="@+id/txtUserNm"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/KorGagaoTalk"/>

        <TextView
            android:id="@+id/txtStateMsg"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center"
            android:textSize="20sp"
            android:text="@string/stateMsgText"/>
    </LinearLayout>
    <View  android:id="@+id/line" style="@style/Line"/>

</LinearLayout>
